--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.5.0",
+    "bootstrap-vue": "4.4.1",
     "canvg": "^3.0.5",
     "core-js": "^3.6.4",
     "dayjs": "^1.8.21",
