--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "react-scripts --openssl-legacy-provider start"
+
   },
   "dependencies": {
     "bootstrap-vue": "2.13.0",
