--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "start": "react-scripts --openssl-legacy-provider start"
-
   },
   "dependencies": {
-    "bootstrap-vue": "2.13.0",
+    "bootstrap-vue": "^2.5.0",
     "canvg": "^3.0.5",
     "core-js": "^3.6.4",
     "dayjs": "^1.8.21",
