--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "serve": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "react-scripts --openssl-legacy-provider start"
+      "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+      "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+    },
+
   },
   "dependencies": {
     "bootstrap-vue": "^2.5.0",
