--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode dev",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "lint": "vue-cli-service lint",
-      "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
 
 
   },
   "dependencies": {
+    "react": "18.2.0",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^8.0.2",
+    "web3": "1.2.2",
     "bootstrap-vue": "^2.5.0",
     "canvg": "^3.0.5",
     "core-js": "^3.6.4",
