--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
 
   },
   "dependencies": {
+    "react": "18.2.0",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^8.0.2",
     "bootstrap-vue": "^2.5.0",
     "canvg": "^3.0.5",
     "core-js": "^3.6.4",
