--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.5.0",
+    "canvg": "^3.0.5",
+    "core-js": "^3.6.4",
+    "dayjs": "^1.8.21",
     "react": "18.2.0",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.0.2",
-    "bootstrap-vue": "^2.5.0",
-    "canvg": "^3.0.5",
-    "core-js": "^3.6.4",
-    "dayjs": "^1.8.21",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2",
     "webextension-polyfill": "^0.6.0"
